--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .divStaraVlcHeader {
     text-align: center;
-    background-color: white;
+    background-color: rgb(216, 212, 212);
 }
 body {
     background-color: rgb(216, 212, 212);
