--- a/style.css
+++ b/style.css
@@ -22,12 +22,12 @@ body {
     font-size: 24px;
     font-style: bold;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    /* AVISO DE FÉRIAS */
 }
 
-.divFerias {
+.divFerias { /* AVISO DE FÉRIAS */
     color: red;
     font-style: bold;
+    font-size: xx-large;
 }
 
 .meuNome {
