--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body {
     color: red;
     font-style: bold;
     font-size: 32px;
+    align-items: center;
+    text-align: center;
 }
 
 .meuNome {
